Added more HTML
Added more images and links

--- a/index.html
+++ b/index.html
@@ -7,15 +7,52 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="top-container">
   <p>Hello, I'm </p>
   <h1>Gugulethu Madondo</h1>
   <p>Front-end developer based in Johannesburg , South Africa</p>
-  <img src="./images/my-image.PNG" alt="my-image">
-  <p>Featured Projects</p>
+   
+    <img class="profile-image" src="./images/profile.PNG" alt="profile-image">
+    </div>
   
-  </div>
+   <div class="middle-container">
+  <h2>Featured Projects</h2>
 
-    
+    <img class="forecast-image" src="./images/weather-forecast.png" alt="forecast-image">
+
+    <p>Far far away, behind the word mountains, far from the countries
+    Vokalia and Consonantia, there live the blind texts. Separated
+    they live in Bookmarksgrove right at the coast of the Semantics, a
+    large language ocean. A small river named Duden flows by</p>
+
+    <p>Far far away, behind the word mountains, far from the countries
+      Vokalia and Consonantia, there live the blind texts. Separated
+      they live in Bookmarksgrove right at the coast of the Semantics, a
+      large language ocean. A small river named Duden flows by</p>
+
+    <img class="clock-image" src="./images/world-clock.png" alt="clock-image">
+
+    <img class="poem-image" src="./images/ai-poem.png" alt="poem-image">
+
+    <p>Far far away, behind the word mountains, far from the countries
+      Vokalia and Consonantia, there live the blind texts. Separated
+      they live in Bookmarksgrove right at the coast of the Semantics, a
+      large language ocean. A small river named Duden flows by</p>
+
+      </div>
+
+      <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank">Contact me</a>
+
+      <footer>
+        <a href="https://www.linkedin.com/in/gugulethu-madondo-44631b214/" target="_blank">Linkedin</a>
+        <a href="https://github.com/Gugulethu14" target="_blank">Github</a>
+        <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank">E-mail</a>
+      </footer>
+
+      <p class="copyright"> @ 2026 Gugulethu Madondo. All rights reserved.</p>
+
+
+
+
 </body>
 </html>
