--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
   <div class="top-container">
+  <div class="intro">
   <p>Hello, I'm </p>
   <h1>Gugulethu Madondo</h1>
-  <p>Front-end developer based in Johannesburg , South Africa</p>
+  <h2>Front-end developer based in Johannesburg , South Africa</h2>
    
     <img class="profile-image" src="./images/profile.PNG" alt="profile-image">
-    </div>
+  </div>
+  </div>
   
-   <div class="middle-container">
-   <h2>Featured Projects</h2>
+ 
+   <h3>Featured Projects</h3>
+
+    <div class="middle-container">
 
     <img class="forecast-image" src="./images/weather-forecast.png" alt="forecast-image">
 
