--- a/index.html
+++ b/index.html
@@ -36,16 +36,9 @@
 
     <img class="clock-image" src="./images/world-clock.png" alt="clock-image">
 
-    <img class="poem-image" src="./images/ai-poem.png" alt="poem-image">
+    </div>
 
-    <p>Far far away, behind the word mountains, far from the countries
-      Vokalia and Consonantia, there live the blind texts. Separated
-      they live in Bookmarksgrove right at the coast of the Semantics, a
-      large language ocean. A small river named Duden flows by</p>
-
-      </div>
-
-      <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank">Contact me</a>
+      <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank" class="contact-btn">Contact me</a>
 
       <footer>
         <a href="https://www.linkedin.com/in/gugulethu-madondo-44631b214/" target="_blank">Linkedin</a>
