Added CSS on Footer

--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
       large language ocean. A small river named Duden flows by</p>
 
     <img class="clock-image" src="./images/world-clock.png" alt="clock-image">
+    </div>
+
+    <div class="">
+      <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank" class="contact-btn">Contact me</a>
 
     </div>
 
-      <a href="mailto:gugulethu.madondo14@gmail.com" target="_blank" class="contact-btn">Contact me</a>
-
+   
+   
+    <div class="bottom-container">
       <footer>
         <a href="https://www.linkedin.com/in/gugulethu-madondo-44631b214/" target="_blank">Linkedin</a>
         <a href="https://github.com/Gugulethu14" target="_blank">Github</a>
@@ -47,6 +52,10 @@
       </footer>
 
       <p class="copyright"> @ 2026 Gugulethu Madondo. All rights reserved.</p>
+
+      </div>
+
+     
 
 
 
